# neverraise

./: .gitignore  noxfile.py  pyproject.toml
examples/: basic.py  json-parse.py
src/neverraise/: __init__.py  result.py
tests/: test_result.py
