[project]
name = "neverraise"
version = "0.1.0"
description = "Result types for python"
readme = "README.md"
authors = [
    { name = "Alexander Ott", email = "66271487+AlexanderHott@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["nox>=2025.5.1"]
test = ["pytest-cov>=6.1.1", "pytest>=8.3.5"]
lint = ["ruff>=0.11.9"]
examples = ["httpx>=0.28.1", "msgspec>=0.19.0"]
